force-app/main/default/objects/Video_Comment__c/Video_Comment__c.object-meta.xml
<CustomObject>
    <label>Video Comment</label>
    <nameField>
        <displayFormat>vc-{00000}</displayFormat>
        <label>Video Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Video Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>