force-app/main/default/objects/Video_Comment__c/fields/Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>Comment_Body__c</fullName>
    <label>Comment Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>