force-app/main/default/objects/Video_Comment__c/fields/Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Seconds__c</fullName>
    <label>Time In Seconds</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>