force-app/main/default/objects/Video_Comment__c/fields/Timecode__c.field-meta.xml
<CustomField>
    <fullName>Timecode__c</fullName>
    <label>Timecode</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>