force-app/main/default/objects/Video_Comment__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <label>Video</label>
    <referenceTo>Video__c</referenceTo>
    <relationshipLabel>Video Comments</relationshipLabel>
    <relationshipName>Video_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>